# convergents

./: .gitignore  CMakeLists.txt  CircumcircleRadiusPredicate.h  ConvexHullHelpers.h  Makefile  OutputSensitiveAlphaShape.h  OutputSensitiveConvexHull.h  PointVector2D.h  README.md  RayIntersectableCircle.h  RayIntersectableStraightLine.h  testAlphaShape  testAlphaShape.cpp  testAlphaShapeStraightLine.cpp  testConvergents.cpp  testConvexHull.cpp  testPointVector2D.cpp  testRay.cpp  toolDisplay.cpp
doc/20131013presentation/: 1-intro.tex  2-alpha.tex  3-CDT.tex  4-FDT.tex  Makefile  pres.tex
doc/algorithm/: algorithm.tex
doc/algorithms/: algo_alpha-shape.tex
doc/m2-pres/: 1-contexte.tex  2-motivation.tex  3-existant.tex  4-contribution.tex  5-poursuite.tex  Makefile  beamer.cls  temp.tex  tl-pres-m2.tex  tl_bibliographie.bib
doc/pres/: 1-parcours.tex  2-motivation.tex  3-existant.tex  4-contribution.tex  5-poursuite.tex  Makefile  beamer.cls  beamerthemeliris.sty  tl-pres-m2disco.tex  (+1 more)
inc/: BasicHelpers.h  BottomUpPositiveAlphaShape.h  CircumcirclePositiveRadiusPredicate.h  CircumcircleRadiusPositivePredicate.h  CircumcircleRadiusPredicate.h  ConvexHullHelpers.h  ExactRayIntersectableCircle.h  IncrementalNegativeAlphaShape.h  InexactRayIntersectableCircle.h  OutputSensitiveAlphaShape.h  OutputSensitiveConvexHull.h  PointVector2D.h  PositiveAlphaShape.h  RayIntersectableCircle.h
lib/: CircumcircleRadiusPredicate.h  OutputSensitiveAlphaShape.h  OutputSensitiveConvexHull.h  RayIntersectableCircle.h
outcome/: as-full.txt  ch-full.txt  ch-time.txt  data.txt
rapport.d/: tl_bibliographie.bib  tl_rapport_patron.tex
src/: testAlphaShape.cpp  testAlphaShapeStraightLine.cpp  testConvergents.cpp  testConvexHull.cpp  testPointVector2D.cpp  testRay.cpp  toolAlphaShape.cpp  toolDisplay.cpp
srcTools/: CMakeLists.txt  toolDisplay.cpp
stests/: CMakeLists.txt  testAlphaShape.cpp  testAlphaShapeStraightLine.cpp  testConvexHull.cpp  testNegativeAlphaShape.cpp  testNegativeAlphaShapeStraightLine.cpp  testPositiveAlphaShape.cpp  testRay.cpp
stools/: CMakeLists.txt  toolAlphaShape.cpp  toolDisplay.cpp
tools/: ch-time.gp  ch.gp  nas.gp  plop1.gp  plop2.gp  time.gp
(+239 files in other folders)
